--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron ."
+    "start": "electron .",
+    "package": "electron-packager ./ filebox --out ./out --platform=win32"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,11 @@
   },
   "homepage": "https://github.com/kyanag/filebox#readme",
   "devDependencies": {
+    "bootstrap": "^4.5.0",
     "electron": "^9.0.2"
   },
   "dependencies": {
-    "bootstrap4": "0.0.1-security",
-    "jquery": "^3.5.1"
+    "jquery": "^3.5.1",
+    "popper.js": "^1.16.1"
   }
 }
