--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "electron .",
-    "package": "electron-packager ./ filebox --out ./out --platform=win32"
+    "package": "electron-packager ./ filebox --out ./out --platform=win32",
+    "yrm": "yrm"
   },
   "repository": {
     "type": "git",
@@ -20,10 +22,19 @@
   "homepage": "https://github.com/kyanag/filebox#readme",
   "devDependencies": {
     "bootstrap": "^4.5.0",
-    "electron": "^9.0.2"
+    "electron": "^9.0.4",
+    "html-webpack-plugin": "^4.3.0",
+    "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "bootstrap-table": "^1.17.1",
+    "css-loader": "^3.6.0",
     "jquery": "^3.5.1",
-    "popper.js": "^1.16.1"
+    "mini-css-extract-plugin": "^0.9.0",
+    "popper.js": "^1.16.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.43.0"
   }
 }
