--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack && ",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "electron .",
+    "start": "webpack && electron .",
     "package": "electron-packager ./ filebox --out ./out --platform=win32",
     "yrm": "yrm"
   },
@@ -27,9 +27,9 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "ag-grid": "^18.1.2",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
-    "bootstrap-table": "^1.17.1",
     "css-loader": "^3.6.0",
     "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
