--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "build": "webpack && ",
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack && electron .",
-    "package": "electron-packager ./ filebox --out ./out --platform=win32",
-    "yrm": "yrm"
+    "package": "electron-builder --win --x64"
   },
   "repository": {
     "type": "git",
@@ -21,20 +20,38 @@
   },
   "homepage": "https://github.com/kyanag/filebox#readme",
   "devDependencies": {
-    "bootstrap": "^4.5.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "css-loader": "^3.6.0",
     "electron": "^9.0.4",
+    "electron-builder": "^22.7.0",
     "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "popper.js": "^1.16.1",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
     "ag-grid": "^18.1.2",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "css-loader": "^3.6.0",
-    "jquery": "^3.5.1",
-    "mini-css-extract-plugin": "^0.9.0",
-    "popper.js": "^1.16.1",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.43.0"
+    "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1"
+  },
+  "build": {
+    "productName": "FileBox",
+    "files": [
+      "dist/",
+      "main.js",
+      "package.json"
+    ],
+    "directories": {
+      "output": "out"
+    }, 
+    "win": {
+      "target": [
+        "nsis",
+        "zip"
+      ]
+    }
   }
 }
