--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "filebox",
   "version": "0.0.1",
   "description": "",
-  "main": "main.js",
+  "main": "background.js",
   "scripts": {
     "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -27,15 +27,18 @@
     "electron-builder": "^22.7.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "popper.js": "^1.16.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "vue-loader": "^15.9.3",
+    "vue-template-compiler": "^2.6.12",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
-    "ag-grid": "^18.1.2",
-    "bootstrap": "^4.5.0",
-    "jquery": "^3.5.1"
+    "bootstrap": "^3.4.1",
+    "file-loader": "^6.1.1",
+    "jquery": "^3.5.1",
+    "vue": "^2.6.12",
+    "vue-html-loader": "^1.2.4"
   },
   "build": {
     "productName": "FileBox",
@@ -46,7 +49,7 @@
     ],
     "directories": {
       "output": "out"
-    }, 
+    },
     "win": {
       "target": [
         "nsis",
