--- a/package.json
+++ b/package.json
@@ -34,9 +34,13 @@
     "webpack-cli": "^3.3.12"
   },
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^3.4.1",
+    "crypto": "^1.0.1",
     "file-loader": "^6.1.1",
+    "fs-extra": "^9.0.1",
     "jquery": "^3.5.1",
+    "toastr": "^2.1.4",
     "vue": "^2.6.12",
     "vue-html-loader": "^1.2.4"
   },
